fix(table): table was overflowing in mobile device

--- a/src/app/components/graphs/graphs.component.scss
+++ b/src/app/components/graphs/graphs.component.scss
@@ -9,9 +9,9 @@
   //padding-top: 1rem;
 }
 
-.margin-1rem {
-  margin: 1rem;
-}
+// .margin-1rem {
+//   margin: 1rem;
+// }
 
 // .headerBtn{
 //     color: ;
@@ -46,9 +46,10 @@
 }
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
-  [graph] {
-    width: 100%;
-  }
+  .margin-top-10px {
+      margin-top: 10px;
+    }
+  
 }
 .btn {
   //width: 100%;
